--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://ed-kung.github.io"
+url: "https://ed-kung.github.io/chirpy-test"
 
 github:
   username: ed-kung # change to your github username
@@ -126,7 +126,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "/chirpy-test"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
