--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ comments:
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
-  self_host:
+  self_host: 
     enabled: # boolean, keep empty means false
     # specify the Jekyll environment, empty means both
     # only works if `assets.self_host.enabled` is 'true'
@@ -126,7 +126,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "/chirpy-test"
 
 # ------------ The following options are not recommended to be modified ------------------
 
